--- a/src/Components/App.razor
+++ b/src/Components/App.razor
@@ -1,11 +1,11 @@
-﻿@inherits BaseComponent<App.Model>
+﻿@inherits BaseComponent<App.Input>
 
 
 <!DOCTYPE html>
 <html lang="en">
-<AppHead Props="new AppHead.Model(Props.Title)"/>
+<AppHeadComponent Data="@(new AppHeadComponent.Input(Data.Title))"/>
 <body hx-ext="preload, json-enc" hx-boost="true">
-@Props.Body
+@Data.Body
 </body>
 </html>
 
@@ -13,6 +13,6 @@
 
 @code {
 
-    public record Model(RenderFragment Body, string Title) : BaseComponentProps;
+    public record Input(RenderFragment Body, string Title);
 
 }
