--- a/src/Components/Pages/Login/LoginComponent.razor
+++ b/src/Components/Pages/Login/LoginComponent.razor
@@ -1,21 +1,21 @@
-@inherits BaseComponent<Register.Model>
+@inherits BaseComponent<LoginComponent.Input>
 
 <div class="auth-page">
     <div class="container page">
         <div class="row">
             <div class="col-md-6 offset-md-3 col-xs-12">
-                <h1 class="text-xs-center">Sign up</h1>
+                <h1 class="text-xs-center">Sign in</h1>
                 <p class="text-xs-center">
-                    <a href="/login">Have an account?</a>
+                    <a href="/register">Need an account?</a>
                 </p>
-                <RegisterForm></RegisterForm>
+                <LoginFormComponent></LoginFormComponent>
             </div>
         </div>
     </div>
 </div>
 
-@code {
 
-    public record Model : BaseComponentProps;
+@code {
+    public record Input;
 
 }
