--- a/src/Components/Pages/Home/TagsComponent.razor
+++ b/src/Components/Pages/Home/TagsComponent.razor
@@ -1,10 +1,10 @@
-@inherits BaseComponent<Tags.Model>
+@inherits BaseComponent<TagsComponent.Input>
 
 <div class="sidebar">
-    <p>Popular Tags</p>
+    <p>Popular TagsComponent</p>
 
     <div class="tag-list" id="taglist">
-        @foreach (var tag in Props.Tags)
+        @foreach (var tag in Data.Tags)
         {
             <a class="tag-default tag-pill" href="?page=1&tag=@tag">@tag</a>
         }
@@ -13,6 +13,6 @@
 
 @code {
 
-    public record Model(List<string> Tags) : BaseComponentProps;
+    public record Input(List<string> Tags);
 
 }
