--- a/src/Components/Pages/Register/RegisterComponent.razor
+++ b/src/Components/Pages/Register/RegisterComponent.razor
@@ -1,22 +1,21 @@
-@inherits BaseComponent<Login.Model>
+@inherits BaseComponent<RegisterComponent.Input>
 
 <div class="auth-page">
     <div class="container page">
         <div class="row">
             <div class="col-md-6 offset-md-3 col-xs-12">
-                <h1 class="text-xs-center">Sign in</h1>
+                <h1 class="text-xs-center">Sign up</h1>
                 <p class="text-xs-center">
-                    <a href="/register">Need an account?</a>
+                    <a href="/login">Have an account?</a>
                 </p>
-                <LoginForm></LoginForm>
+                <RegisterFormComponent></RegisterFormComponent>
             </div>
         </div>
     </div>
 </div>
 
-
 @code {
 
-    public record Model : BaseComponentProps;
+    public record Input;
 
 }
